# IBM_FullStack_Devloper_Django_App_Final_Project

./: pyproject.toml
myproject/: settings.py
onlinecourse/: admin.py  models.py  urls.py  views.py
onlinecourse/migrations/: 0001_initial.py  0002_choice_submission_question_choice_question.py
onlinecourse/templates/onlinecourse/: course_detail_bootstrap.html  exam_result_bootstrap.html
